--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 app.url=https://api.tmsandbox.co.nz
-tm_consumerKey=1A0380428ED622E87B61A3B715ADD261
-tm_consumerSecret=976734B841BF2EC342078861F8CCC737
-tm_accessToken=02B33D88523D23FBAC19A4FC7C3F3439
-tm_secretToken=4BBEE58D87F0ECD73CC296F02B0828D2
+charities.endpoint=/v1/Charities.json
+listing.endpoint=/v1/listings/
+
+tm.consumerKey=1A0380428ED622E87B61A3B715ADD261
+tm.consumerSecret=976734B841BF2EC342078861F8CCC737
+tm.accessToken=02B33D88523D23FBAC19A4FC7C3F3439
+tm.secretToken=4BBEE58D87F0ECD73CC296F02B0828D2
